--- a/docs/Get start/Design.mdx
+++ b/docs/Get start/Design.mdx
@@ -1,9 +1,12 @@
 ---
-sidebar_position: 6
+sidebar_position: 2
 ---
 
-# Congratulations!
 
+# Design
+
+<Tabs>
+    <TabItem value="test" label="test" default>
 You have just learned the **basics of Docusaurus** and made some changes to the **initial template**.
 
 Docusaurus has **much more to offer**!
@@ -11,7 +14,8 @@ Docusaurus has **much more to offer**!
 Have **5 more minutes**? Take a look at **[versioning](../tutorial-extras/manage-docs-versions.md)** and **[i18n](../tutorial-extras/translate-your-site.md)**.
 
 Anything **unclear** or **buggy** in this tutorial? [Please report it!](https://github.com/facebook/docusaurus/discussions/4610)
-
+    <TabItem>
+     <TabItem value="alpha" label="alpha">
 ## What's next?
 
 - Read the [official documentation](https://docusaurus.io/)
@@ -21,3 +25,6 @@ Anything **unclear** or **buggy** in this tutorial? [Please report it!](https://
 - Add a [search bar](https://docusaurus.io/docs/search)
 - Find inspirations in the [Docusaurus showcase](https://docusaurus.io/showcase)
 - Get involved in the [Docusaurus Community](https://docusaurus.io/community/support)
+
+<TabItem>
+</Tabs>
