Added button doc

--- a/docs/Components/Badge/Badge.mdx
+++ b/docs/Components/Badge/Badge.mdx
@@ -1,9 +1,6 @@
 ---
 sidebar_position: 1
 ---
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-
 
 
 # Badge
@@ -12,10 +9,8 @@ import TabItem from '@theme/TabItem';
 Badges are small, visual elements that clearly and concisely communicate status, achievement, or information. They supplement other UI components, adding meaning at a glance.
 
 -----
-<Tabs>
-  <TabItem value="Overview" label="Overview" default>
-  
-  ## Types
+## Overview
+### Types
 
 - **Notification badges**
     - Use a circle or rectangle notification badge to notify, quantify, or indicate a role or status.
@@ -24,13 +19,13 @@ Badges are small, visual elements that clearly and concisely communicate status,
 
 ![Type](img/type.png)
 
-## Anatomy
+### Anatomy
 
-![Anatomy](img/anatomy.png)
+![Anatomy](img/anatomy.png) 
 
-## Usage
+### Usage
 
-### Notification badges
+#### Notification badges
 
 Use a circle or rectangle notification badge to notify, quantify, or indicate a role or status.
 
@@ -40,7 +35,7 @@ Use a circle or rectangle notification badge to notify, quantify, or indicate a 
 
 ![usage-notification](img/usage-notification.png)
 
-### Status badges
+#### Status badges
 
 Use a simple shape to indicate newness or current status
 
@@ -50,23 +45,20 @@ Use a simple shape to indicate newness or current status
 
 ![alt text](img/usage-status.png)
 
-## Behaviour
+### Behaviour
 
-- ### Rectangle Badge
+- #### Rectangle Badge
 ![alt text](img/behaviour-rectangle.png)
 
 
-- ### Circle Badge
+- #### Circle Badge
 ![alt text](img/behaviour-circle.png)
 
-- ### Status Badge
+- #### Status Badge
 ![alt text](img/behaviour-status.png)
-  </TabItem>
 
-
-<TabItem value="Specs" label="Specs">
-
-## Measurements
+## Specs
+### Measurements
 
 ![Measurements](img/measurements.png)
 
@@ -80,7 +72,7 @@ Use a simple shape to indicate newness or current status
 | Large badge icon    | 20 dp |
 
 
-## Position
+### Position
 
 Badges can be positioned absolutely to overlay assets or inline to occupy layout space.
 
@@ -89,13 +81,13 @@ Avoid badge overlaps with trailing elements. Instead, place badges at the lockup
 ![Position](img/position.png)
 
 
-## width
+### width
 
 Badges are not fixed-width; therefore, their containers should not be stretched to fill the layout
 
 ![Width](img/width.png)
 
-## Label Text
+### Label Text
 
 
 Label notification badges with a count or status. Badge labels can contain up to four characters, including a ‘+’ for overflow.
@@ -106,6 +98,5 @@ Label notification badges with a count or status. Badge labels can contain up to
 
 
 
-  </TabItem>
-</Tabs>
+
 
