--- a/docs/Components/Icon-Button/Icon-Button.mdx
+++ b/docs/Components/Icon-Button/Icon-Button.mdx
@@ -6,6 +6,9 @@ import TabItem from '@theme/TabItem';
 
 # Icon Button
 Icon buttons are compact buttons that display icons without accompanying text labels. They are used for actions where the icon alone clearly communicates the function, such as navigation, closing a dialog, or sharing content.
+
+---
+
 ## Overview
 ### Types
 
@@ -92,3 +95,17 @@ Each screen should contain a single prominent button for the primary action, usi
         ![Error-ghost](./img/error-ghost.png)
     </TabItem>
 </Tabs>
+
+## Specs
+### Measurements
+
+![](https://space.yoko.studio/wp-content/uploads/2025/03/mebut-1-1024x342.png)
+![Measurements](./img/measurements.png)
+
+| Attribute | Value |
+| --- | --- |
+| Container | 16 dp |
+| Container corner shape | 4 dp |
+| Icon size | 12 dp |
+| Icon alignment | Center |
+| Target size | 24 db |
