Added Deign,Whats yoko

--- a/docs/Get start/Design.mdx
+++ b/docs/Get start/Design.mdx
@@ -2,7 +2,47 @@
 sidebar_position: 2
 ---
 
-
 # Design
-## What's next?
+Getting Started with [Yoko Space](https://space.yoko.studio/docs/whats-yoko/)
+-----------------------------------------------------------------------------
 
+Yoko Space is an open-source design system that is fully accessible to everyone. This design system allows you to create cohesive, functional, and beautiful experiences for your products. Our goal is to ensure that designs seamlessly translate into code, and that you, as a designer, can effectively use all the available resources in a quick and efficient manner.
+
+Yoko Space enables you to create designs that are not only aesthetically pleasing and user-friendly but also align with global design standards. By using this system, you benefit from a structured approach to your designs, ensuring a consistent user experience across all platforms.
+
+Yoko Space Web Design Kit
+-------------------------
+
+Currently, only the **Yoko Space Web Design Kit** is available. This kit includes a collection of components, styles, colors, and other design resources that help you create high-quality web designs. The Web Kit is specifically tailored for websites and web applications, containing all the details you need to create an exceptional user experience.
+
+In the future, updates and new kits for other platforms will be released. However, for now, all resources and components are ready and available for web design.
+
+### Accessing Yoko Space
+
+Yoko Space is an open-source design system, meaning it is freely accessible for anyone to use. The design system is hosted on Figma, where you can easily access all the available kits. To start using the Web Kit, simply visit the Figma resources and download them.
+
+[RTL Version](https://www.figma.com/community/file/1400752411511347636)
+
+[LTR Version](https://www.figma.com/community/file/1400747734632264113)
+
+Furthermore, all Yoko Space design resources are regularly updated to ensure they stay aligned with the latest design standards, allowing you to create modern and professional user experiences.
+
+Designing with Yoko Space
+-------------------------
+
+To begin designing with Yoko Space, you can start by utilizing the components and resources provided in the Web Kit. All components are organized in an easy-to-navigate panel, giving you quick access to everything you need to create your designs.
+
+The Yoko Space design kit has been crafted with developers in mind. This means that every component and feature within the kit is perfectly aligned with the corresponding code, making the handoff from design to development seamless and efficient.
+
+Key features of the Yoko Space design kit include:
+
+-   **Ready-to-use components**: All components and design elements are organized and easy to access, so you can use them directly in your designs.
+-   **Customizable settings**: You can easily adjust colors, sizes, and other properties to match the specific needs of your project.
+-   **Code alignment**: All properties and variables in the design kit are aligned with the corresponding code, ensuring a smooth transition from design to development.
+
+Why Yoko Space?
+===============
+
+-   **Open Source**: Yoko Space is an open-source design system, meaning everyone has access to it and can freely use it in their projects. This feature allows you to integrate the design resources easily into your work.
+-   **Design and Development Integration**: With Yoko Space, you can transition from design to development without worrying about mismatched styles or discrepancies. All design resources are created to work perfectly with the corresponding code.
+-   **Future-Ready**: In the near future, design kits for other platforms (such as mobile and desktop) will be released, allowing you to maintain consistency across all platforms.
